Fixed and updated references

--- a/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.bib
+++ b/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.bib
@@ -594,17 +594,6 @@ url = {http://link.aps.org/doi/10.1103/PhysRevA.84.053611},
 volume = {84},
 year = {2011}
 }
-@article{Drewes2016,
-abstract = {Near zero temperature, quantum magnetism can non-trivially arise from short-range interactions, but the occurrence of magnetic order depends crucially on the interplay of interactions, lattice geometry, dimensionality and doping. Even though the consequences of this interplay are not yet fully understood, quantum magnetism is believed to be connected to a range of complex phenomena in the solid state, for example, in the context of high-{\$}T{\_}c{\$} superconductivity and spin liquids in frustrated lattices. Ultracold atomic Fermi gases in optical lattices constitute an experimental system with unrivalled tunability and detection capabilities to explore quantum magnetism by analog quantum simulation. In this work, we study the emergence of antiferromagnetic correlations between ultracold fermionic atoms in two dimensions with decreasing temperature. We determine the magnetic susceptibility of the Hubbard model from simultaneous measurements of the in-situ density of both spin components. At half-filling and strong interactions our data approach the Heisenberg model of localized spins with antiferromagnetic correlations. Moreover, we observe the disappearance of magnetic correlations when the system is doped away from half-filling. Our observation of the dependence of quantum magnetism on doping paves the way for future studies on the emergence of pseudogap and pairing phenomena away from half-filling.},
-author = {Drewes, J. H. and Miller, L. A. and Cocchi, E. and Chan, C. F. and Pertot, D. and Brennecke, F. and K{\"{o}}hl, M.},
-file = {:C$\backslash$:/Users/anton/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Drewes et al. - 2016 - Antiferromagnetic correlations in two-dimensional fermionic Mott-insulating and metallic phases.pdf:pdf},
-journal = {arXiv},
-month = {jul},
-pages = {1607.00392},
-title = {{Antiferromagnetic correlations in two-dimensional fermionic Mott-insulating and metallic phases}},
-url = {http://arxiv.org/abs/1607.00392},
-year = {2016}
-}
 @article{Nixon2013,
 author = {Nixon, M. and Redding, B. and Friesem, A.A. and {Cao, H.} and Davidson, N.},
 journal = {Optics Letters},
@@ -936,7 +925,7 @@ issn = {1050-2947},
 journal = {Physical Review A},
 month = {aug},
 number = {2},
-pages = {021402},
+pages = {021402(R)},
 publisher = {American Physical Society},
 title = {{Low-noise optical lattices for ultracold 6Li}},
 url = {http://link.aps.org/doi/10.1103/PhysRevA.92.021402},
@@ -1483,13 +1472,6 @@ url = {http://dx.doi.org/10.1038/nphys2259},
 volume = {8},
 year = {2012}
 }
-@article{Skogestad2001,
-author = {Skogestad, Sigurd},
-journal = {Journal of Process Control},
-title = {{Probably the best simple PID tuning rules in the world}},
-url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.519.5858},
-year = {2001}
-}
 @article{Ketterle1999,
 abstract = {Contribution to the proceedings of the 1998 Enrico Fermi summer school on Bose-Einstein condensation in Varenna, Italy.},
 archivePrefix = {arXiv},
@@ -1776,8 +1758,6 @@ year = {1973}
 @article{Cheuk2016,
 abstract = {We report on the site-resolved observation of characteristic states of the two-dimensional repulsive Fermi-Hubbard model, using ultracold 40 K atoms in an optical lattice. By varying the tunneling, interaction strength, and external confinement, we realize metallic, Mott-insulating, and band-insulating states. We directly measure the local moment, which quantifies the degree of on-site magnetization, as a function of temperature and chemical potential. Entropies per particle as low as 0.99ð6Þk B indicate that nearest-neighbor antiferromagnetic correlations should be detectable using spin-sensitive imaging.},
 author = {Cheuk, Lawrence W and Nichols, Matthew A and Lawrence, Katherine R and Okan, Melih and Zhang, Hao and Zwierlein, Martin W},
-doi = {10.1103/PhysRevLett.116.235301},
-file = {:C$\backslash$:/Users/anton/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Cheuk et al. - 2016 - Observation of 2D Fermionic Mott Insulators of 40 K with Single-Site Resolution.pdf:pdf},
 journal = {Phys. Rev. Lett},
 number = {235301},
 title = {{Observation of 2D Fermionic Mott Insulators of 40 K with Single-Site Resolution}},
@@ -1902,7 +1882,7 @@ author = {Cheuk, Lawrence W. and Nichols, Matthew A. and Okan, Melih and Gersdor
 doi = {10.1103/PhysRevLett.114.193001},
 file = {:C$\backslash$:/Users/anton/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Cheuk et al. - 2015 - Quantum-Gas Microscope for Fermionic Atoms.pdf:pdf},
 issn = {0031-9007},
-journal = {Physical Review Letters},
+journal = {Phys. Rev. Lett.},
 month = {may},
 number = {19},
 pages = {193001},
@@ -2053,17 +2033,6 @@ url = {http://www.tandfonline.com/doi/full/10.1080/14786435.2013.845314},
 volume = {95},
 year = {2015}
 }
-@article{Brown2016,
-abstract = {Understanding the magnetic response of the normal state of the cuprates is considered a key piece in solving the puzzle of their high-temperature superconductivity. The essential physics of these materials is believed to be captured by the Fermi-Hubbard model, a minimal model that has been realized with cold atoms in optical lattices. Here we report on site-resolved measurements of the Fermi-Hubbard model in a spin-imbalanced atomic gas, allowing us to explore the response of the system to large effective magnetic fields. We observe short-range canted antiferromagnetism at half-filling with stronger spin correlations in the direction orthogonal to the magnetization, in contrast with the spin-balanced case where identical correlations are measured for any projection of the pseudospin. The rotational anisotropy of the spin correlators is found to increase with polarization and with distance between the spins. Away from half-filling, the polarization of the gas exhibits non-monotonic behavior with doping for strong interactions, resembling the behavior of the magnetic susceptibility in the cuprates. We compare our measurements to predictions from Determinantal Quantum Monte Carlo (DQMC) and Numerical Linked Cluster Expansion (NLCE) algorithms and find good agreement. Calculations on the doped system are near the limits of these techniques, illustrating the value of cold atom quantum simulations for studying strongly-correlated materials.},
-author = {Brown, Peter T. and Mitra, Debayan and Guardado-Sanchez, Elmer and Schau{\ss}, Peter and Kondov, Stanimir S. and Khatami, Ehsan and Paiva, Thereza and Trivedi, Nandini and Huse, David A. and Bakr, Waseem S.},
-file = {:C$\backslash$:/Users/anton/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Brown et al. - 2016 - Observation of canted antiferromagnetism with ultracold fermions in an optical lattice.pdf:pdf},
-journal = {arXiv},
-month = {dec},
-number = {1612.07746},
-title = {{Observation of canted antiferromagnetism with ultracold fermions in an optical lattice}},
-url = {http://arxiv.org/abs/1612.07746},
-year = {2016}
-}
 @article{Witten2012,
 author = {Witten, Edward},
 doi = {10.1126/science.1225474},
@@ -2113,18 +2082,6 @@ title = {{Cooling a Single Atom in an Optical Tweezer to Its Quantum Ground Stat
 url = {http://link.aps.org/doi/10.1103/PhysRevX.2.041014},
 volume = {2},
 year = {2012}
-}
-@article{Bechhoefer2005,
-abstract = {Feedback and control theory are important ideas that should form part of the education of a physicist but rarely do. This tutorial essay aims to give enough of the formal elements of control theory to satisfy the experimentalist designing or running a typical physics experiment and enough to satisfy the theorist wishing to understand its broader intellectual context. The level is generally simple, although more advanced methods are also introduced. Several types of applications are discussed, as the practical uses of feedback extend far beyond the simple regulation problems where it is most often employed. Sketches are then provided of some of the broader implications and applications of control theory, especially in biology, which are topics of active research. CONTENTS I. Introduction 783 II. Brief Review of Dynamical Systems 785 III. Feedback: An Elementary Introduction 788 A. Basic ideas: Frequency domain 788 B. Basic ideas: Feedforward 789 C. Basic ideas: Time domain 790 D. Two case studies 792 1. Michelson interferometer 792 2. Operational amplifier 793 E. Integral control 794 IV. Feedback and Stability 795 A. Stability in dynamical systems 795 B. Stability ideas in feedback systems 796 C. Delays: Their generic origins and effect on stability 797 D. Nonminimum-phase systems 798 E. MIMO vs SISO systems 799 V. Implementation and Some Advanced Topics 801 A. Experimental determination of the transfer function 801 1. Measurement of the transfer function 801 2. Model building 802 3. Model reduction 802 4. Revisiting the system 803 B. Choosing the controller 804 1. PID controllers 804 2. Loop shaping 805 3. Optimal control 806 C. Digital control loops 809 1. Case study: Vibration isolation of an atom interferometer 813 2. Commercial tools 814 D. Measurement noise and the Kalman filter 814 E. Robust control 817 1. The internal model control parametrization 817 2. Quantifying model uncertainty 818 3. Robust stability 819 4. Robust performance 820},
-author = {Bechhoefer, John},
-file = {:C$\backslash$:/Users/anton/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Bechhoefer - 2005 - Feedback for physicists A tutorial essay on control.pdf:pdf},
-journal = {Reviews of Modern Physics},
-number = {3},
-pages = {783--836},
-title = {{Feedback for physicists: A tutorial essay on control}},
-url = {http://fraden.brandeis.edu/courses/phys39/Thermal Control/PID/Bechhoefer Feedback for physicists Rev Mod Phys 2005.pdf},
-volume = {77},
-year = {2005}
 }
 @article{Blanter2000,
 abstract = {Theoretical and experimental work concerned with dynamic fluctuations has developed into a very active and fascinating subfield of mesoscopic physics. We present a review of this development focusing on shot noise in small electric conductors. Shot noise is a consequence of the quantization of charge. It can be used to obtain information on a system which is not available through conductance measurements. In particular, shot noise experiments can determine the charge and statistics of the quasiparticles relevant for transport, and reveal information on the potential profile and internal energy scales of mesoscopic systems. Shot noise is generally more sensitive to the effects of electron–electron interactions than the average conductance. We present a discussion based on the conceptually transparent scattering approach and on the classical Langevin and Boltzmann–Langevin methods; in addition a discussion of results which cannot be obtained by these methods is provided. We conclude the review by pointing out a number of unsolved problems and an outlook on the likely future development of the field.},
@@ -2367,14 +2324,6 @@ publisher = {Wolfram Publishing},
 title = {{A New Kind of Science}},
 year = {2002}
 }
-@article{Hubbard1963,
-author = {Hubbard, J.},
-journal = {Proceedings of the Royal Society of London A: Mathematical, Physical and Engineering Sciences},
-number = {1365},
-title = {{Electron Correlations in Narrow Energy Bands}},
-volume = {276},
-year = {1963}
-}
 @phdthesis{Zupancic2013,
 abstract = {I present a robust scheme to measure and compensate phase front distortions of laser systems in-situ using a digital micromirror device as a holographic spatial light modulator. The detectors for the measurements can be ultracold atoms in optical lattices, trapped ions, NV centers or other small, localized and flu- orescent objects. With this, aberrations of several $\lambda$ can be reduced to $\lambda$/50. This gives rise to diffraction-limited spot sizes, e.g. to address single atoms in a periodic potential. Furthermore, arbitrary potential landscapes can be created and steered dynamically with high precision.},
 author = {Zupancic, Philip P. J.},
@@ -2463,15 +2412,6 @@ publisher = {Roberts {\&} Company},
 title = {{Introduction to Fourier Optics}},
 year = {2005}
 }
-@article{Choi2016,
-author = {Choi, Jae-yoon and Hild, Sebastian and Zeiher, Johannes and Schau{\ss}, Peter and Rubio-Abadal, Antonio and Yefsah, Tarik and Khemani, Vedika and Huse, David A. and Bloch, Immanuel and Gross, Christian},
-journal = {Science},
-number = {6293},
-title = {{Exploring the many-body localization transition in two dimensions}},
-url = {http://science.sciencemag.org/content/352/6293/1547},
-volume = {352},
-year = {2016}
-}
 @phdthesis{Gehm2003,
 author = {Gehm, Michael E},
 school = {Duke University},
@@ -2495,7 +2435,7 @@ year = {1992}
 author = {Omran, Ahmed and Boll, Martin and Hilker, Timon A. and Kleinlein, Katharina and Salomon, Guillaume and Bloch, Immanuel and Gross, Christian},
 doi = {10.1103/PhysRevLett.115.263001},
 issn = {0031-9007},
-journal = {Physical Review Letters},
+journal = {Phys. Rev. Lett.},
 month = {dec},
 number = {26},
 pages = {263001},
@@ -2770,17 +2710,6 @@ url = {http://iopscience.iop.org/0295-5075/22/6/003},
 volume = {22},
 year = {1993}
 }
-@article{Savard1997,
-abstract = {Using a simple model, we calculate the heating rates arising from laser intensity noise and beam-pointing fluctuations in far-off resonance optical traps. Intensity noise causes exponential heating, while beam-pointing noise causes heating at a constant rate. The achievement of heating time constants well beyond 10 sec imposes stringent requirements on the laser noise power spectra. Noise spectra are measured for a commercial argon-ion laser to illustrate the expected time scales. ͓S1050-2947͑97͒51108-5͔ PACS number͑s͒: 32.80.Pj Far-off resonance optical traps offer an attractive means of confining atoms with a large restoring force and poten-tially long trapping times. Large detunings from resonance are used to achieve low spontaneous scattering rates. This increases the maximum trapped atom density by reducing heating ͓1,2͔, by reducing repulsive scattering forces ͓3͔, and by reducing excited-state trap loss collisions ͓4͔. The large detuning also permits trapping of multiple atomic spin states in nearly identical potentials ͓1͔. This is useful for funda-mental studies of collisions and for atomic clocks. For these reasons, far-off resonance optical traps and lattices have been extensively explored by a number of groups ͓1,2,5–9͔. Several groups have attempted to obtain long storage times by utilizing extreme detunings from resonance. Hein-zen and co-workers employed red detunings of up to 65 nm and achieved storage times of 200 msec, limited by back-ground gas collisions ͓1͔. A sodium trap using a krypton-ion laser operating at 647 and 676 nm also has been explored ͓5͔. Storage times of a few seconds have been demonstrated with a red detuned trap based on a YAG ͑yttrium aluminum garnet͒ laser at 1.06 ␮m ͓5,6͔. Most recently, trapping of cesium atoms has been achieved using a CO 2 laser operating at 10.6 ␮m. In this case, spontaneous emission was limited to the Rayleigh scattering rate, of order 10 Ϫ3 sec Ϫ1 . However, the background pressure limited storage times to less than 1 s, with extrapolated storage times of 3 sec at zero pressure ͓7͔. In principle, by using very-far-off resonance traps in a high vacuum, the ideal limit of a conservative potential and very long trapping times can be nearly achieved. Unfortunately, in all traps employing red detunings, stor-age times have been limited below 10 sec ͓5–7͔. Further, it has been noted that red detuned traps appear to suffer from unexplained heating rates. For the YAG laser trap, the trap-ping time is reported to be inversely proportional to the laser intensity and independent of density ͓5,6͔. Hence, attempts have been made to circumvent the heating problem by using blue detuned traps that confine atoms via a repulsive poten-tial ͓5,10,11͔. In this way, atoms spend a minimum time in the optical field and hopefully experience less heating. In this paper, we show that laser intensity fluctuations and beam-pointing fluctuations may play an important role in determining the minimum heating rates that can be obtained in both red and blue detuned optical traps. Although it has been obvious for some time that trap fluctuations can cause},
-author = {Savard, T A and {O 'hara}, K M and Thomas, J E},
-file = {:C$\backslash$:/Users/anton/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Savard, O 'hara, Thomas - Unknown - Laser-noise-induced heating in far-off resonance optical traps.pdf:pdf},
-journal = {Phys. Rev. A},
-number = {2},
-title = {{Laser-noise-induced heating in far-off resonance optical traps}},
-url = {https://physics.ncsu.edu/jet/publications/pdf/LaserNoise.pdf},
-volume = {56},
-year = {1997}
-}
 @article{Tasaki1989,
 author = {Tasaki, Hal},
 doi = {10.1103/PhysRevB.40.9192},
@@ -2925,4 +2854,73 @@ title = {{Optical nanoscopy of transient states in condensed matter}},
 url = {http://www.nature.com/articles/srep12582},
 volume = {5},
 year = {2015}
+}
+@article{Drewes2016,
+abstract = {Near zero temperature, quantum magnetism can non-trivially arise from short-range interactions, but the occurrence of magnetic order depends crucially on the interplay of interactions, lattice geometry, dimensionality and doping. Even though the consequences of this interplay are not yet fully understood, quantum magnetism is believed to be connected to a range of complex phenomena in the solid state, for example, in the context of high-{\$}T{\_}c{\$} superconductivity and spin liquids in frustrated lattices. Ultracold atomic Fermi gases in optical lattices constitute an experimental system with unrivalled tunability and detection capabilities to explore quantum magnetism by analog quantum simulation. In this work, we study the emergence of antiferromagnetic correlations between ultracold fermionic atoms in two dimensions with decreasing temperature. We determine the magnetic susceptibility of the Hubbard model from simultaneous measurements of the in-situ density of both spin components. At half-filling and strong interactions our data approach the Heisenberg model of localized spins with antiferromagnetic correlations. Moreover, we observe the disappearance of magnetic correlations when the system is doped away from half-filling. Our observation of the dependence of quantum magnetism on doping paves the way for future studies on the emergence of pseudogap and pairing phenomena away from half-filling.},
+author = {Drewes, J. H. and Miller, L. A. and Cocchi, E. and Chan, C. F. and Pertot, D. and Brennecke, F. and K{\"{o}}hl, M.},
+journal = {Phys. Rev. Lett.},
+month = {apr},
+pages = {170401},
+title = {{Antiferromagnetic correlations in two-dimensional fermionic Mott-insulating and metallic phases}},
+volume = {118},
+year = {2017}
+}
+
+@article{Brown2017,
+author = {Brown, Peter T. and Mitra, Debayan and Guardado-Sanchez, Elmer and Schau{\ss}, Peter and Kondov, Stanimir S. and Khatami, Ehsan and Paiva, Thereza and Trivedi, Nandini and Huse, David A. and Bakr, Waseem S.},
+journal = {Science},
+month = {sep},
+pages = {1385},
+title = {{Spin imbalance in a 2D Fermi-Hubbard system}},
+volume = {357},
+year = {2017}
+}
+
+@article{Hubbard1963,
+author = {Hubbard, J.},
+journal = {Proc. Roy. Soc. A: Mathematical, Physical and Engineering Sciences},
+number = {1365},
+pages = {238},
+title = {{Electron Correlations in Narrow Energy Bands}},
+volume = {276},
+year = {1963}
+}
+
+@article{Savard1997,
+author = {Savard, T. A. and {O'Hara}, K. M. and Thomas, J. E.},
+journal = {Phys. Rev. A},
+number = {2},
+title = {{Laser-noise-induced heating in far-off resonance optical traps}},
+volume = {56},
+year = {1997}
+}
+
+@article{Bechhoefer2005,
+author = {Bechhoefer, John},
+journal = {Rev. Mod. Phys.},
+number = {3},
+pages = {783--836},
+title = {{Feedback for physicists: A tutorial essay on control}},
+volume = {77},
+year = {2005}
+}
+
+@article{Skogestad2003,
+author = {Skogestad, Sigurd},
+journal = {J. of Process Control},
+title = {{Simple analytic rules for model reduction and PID controller tuning}},
+year = {2003},
+volume = {13},
+number = {4},
+pages = {291},
+}
+
+@article{Choi2016,
+author = {Choi, Jae-Yoon and Hild, Sebastian and Zeiher, Johannes and Schau{\ss}, Peter and Rubio-Abadal, Antonio and Yefsah, Tarik and Khemani, Vedika and Huse, David A. and Bloch, Immanuel and Gross, Christian},
+journal = {Science},
+number = {6293},
+title = {{Exploring the many-body localization transition in two dimensions}},
+url = {http://science.sciencemag.org/content/352/6293/1547},
+volume = {352},
+year = {2016}
 }
