Many changes to abstract, text, fixes to figures

--- a/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.bib
+++ b/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.bib
@@ -2059,7 +2059,7 @@ url = {https://www.osapublishing.org/abstract.cfm?URI=josab-6-11-2023},
 volume = {6},
 year = {1989}
 }
-@article{Mazurenko2016,
+@article{Mazurenko2017,
 abstract = {Exotic phenomena in systems with strongly correlated electrons emerge from the interplay between spin and motional degrees of freedom. For example, doping an antiferromagnet is expected to give rise to pseudogap states and high-temperature superconductors 1 . Quantum simulation 2–8 using ultracold fermions in optical lattices could help to answer open questions about the doped Hubbard Hamiltonian 9–14 , and has recently been advanced by quantum gas microscopy 15–20 . Here we report the realization of an antiferromagnet in a repulsively interacting Fermi gas on a two-dimensional square lattice of about 80 sites at a temperature of 0.25 times the tunnelling energy. The antiferromagnetic long-range order manifests through the divergence of the correlation length, which reaches the size of the system, the development of a peak in the spin structure factor and a staggered magnetization that is close to the ground-state value. We hole-dope the system away from half-filling, towards a regime in which complex many-body states are expected, and find that strong magnetic correlations persist at the antiferromagnetic ordering vector up to dopings of about 15 per cent. In this regime, numerical simulations are challenging 21 and so experiments provide a valuable benchmark. Our results demonstrate that microscopy of cold atoms in optical lattices can help us to understand the low-temperature Fermi–Hubbard model.},
 author = {Mazurenko, Anton and Chiu, Christie S and Ji, Geoffrey and Parsons, Maxwell F and Kan{\'{a}}sz-Nagy, M{\'{a}}rton and Schmidt, Richard and Grusdt, Fabian and Demler, Eugene and Greif, Daniel and Greiner, Markus},
 doi = {10.1038/nature22362},
@@ -2907,7 +2907,7 @@ year = {2005}
 
 @article{Skogestad2003,
 author = {Skogestad, Sigurd},
-journal = {J. of Process Control},
+journal = {J. Process Control},
 title = {{Simple analytic rules for model reduction and PID controller tuning}},
 year = {2003},
 volume = {13},
