--- a/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.tex
+++ b/LatticeOptics/latticeOpticsv5/LatticeOpticsV5.tex
@@ -39,7 +39,7 @@
 
 \date{\today}
 \begin{abstract}
-  We describe the design and implementation of a stable high-power \unit{1064}{nm} laser system for use in experiments with ultracold atoms trapped in optical lattices. The system is based on a low-noise laser amplified by an array of four heavily modified, high-power fiber amplifiers. The beam intensity is stabilized and controlled with a nonlinear feedback loop. Using real-time monitoring of the resulting optical lattice, we demonstrate a shot-to-shot stability of the lattice position at 1\% of the lattice spacing and a long-term (six month) relative stability of 0.5\% RMS of the lattice spacing.
+  We describe the design and implementation of a stable high-power \unit{1064}{nm} laser system for use in experiments with ultracold atoms trapped in optical lattices. The system is based on a low-noise laser amplified by an array of four heavily modified, high-power fiber amplifiers. The beam intensity is stabilized and controlled with a nonlinear feedback loop. Using real-time monitoring of the resulting optical lattice, we demonstrate a shot-to-shot stability of the lattice position at 1\% of the lattice spacing and a long-term (six month) stability of 0.5\% RMS of the lattice spacing itself.
 \end{abstract}
 \maketitle
 
